cmake_minimum_required(VERSION 3.13)
project(maratones)

set(CMAKE_CXX_STANDARD 11)

add_executable(nextround nextround.cpp)
add_executable(watermelon watermelon.cpp)

add_executable(lcsubsequence lcsubsequence.cpp)
add_executable(snacktower snacktower.cpp)
add_executable(soccerchampionship soccerchampionship.cpp)
add_executable(raisingbacteria raisingbacteria.cpp)